# mori-desktop

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.json  index.html  package-lock.json  package.json  vite.config.ts
.claude/skills/: grep-jsonl.md  release-patch.md  ship-and-verify.md
.github/: pull_request_template.md
.github/workflows/: check.yml  release.yml
crates/mori-cli/: Cargo.toml
crates/mori-cli/src/: main.rs
crates/mori-core/: Cargo.toml
crates/mori-core/src/: agent.rs  agent_profile.rs  context.rs  correction_audit.rs  correction_inbox.rs  corrections.rs  corrections_apply.rs  corrections_writer.rs  dev_orchestrator.rs  evaluator.rs  event_log.rs  lib.rs  mode.rs  paste.rs  process.rs  redact.rs  runtime.rs  skill.rs  tokenize.rs  transcribe_media.rs  url_detect.rs  voice.rs  voice_cleanup.rs  voice_feedback.rs  voice_input_profile.rs
crates/mori-core/src/annuli/: client.rs  mod.rs
crates/mori-core/src/body/: artifact.rs  cue_state.rs  manifest.rs  mod.rs  permission.rs  permission_audit.rs  registry.rs
crates/mori-core/src/installed_apps/: linux.rs  macos.rs  mod.rs  windows.rs
crates/mori-core/src/llm/: bash_cli_agent.rs  claude_cli.rs  ear_transcribe.rs  generic_openai.rs  groq.rs  mod.rs  ollama.rs  openai_compat.rs  transcribe.rs  whisper_local.rs
crates/mori-core/src/memory/: annuli.rs  markdown.rs  mod.rs
crates/mori-core/src/skill/: anthropic_skill.rs  compose.rs  echo.rs  edit.rs  fetch_url.rs  forget.rs  gmail.rs  mcp_tool.rs  mod.rs  paste_selection.rs  polish.rs  python_runner.rs  read_file.rs  read_wiki_page.rs  recall.rs  remember.rs  remind_me.rs  remind_me_cron.rs  set_mode.rs  summarize.rs  translate.rs
crates/mori-core/tests/: ear_e2e.rs  integration_annuli.rs
crates/mori-file-loader/: Cargo.toml
crates/mori-file-loader/src/: docx.rs  epub.rs  lib.rs  pdf.rs  xlsx.rs
crates/mori-file-loader/tests/: integration.rs
crates/mori-file-loader/tests/fixtures/: sample-with-datetime-error.xlsx  sample-with-hyperlink-break-tab.docx  sample.docx  sample.epub  sample.xlsx
crates/mori-gmail/: Cargo.toml
crates/mori-gmail/src/: client.rs  lib.rs  oauth.rs  token.rs
crates/mori-mcp/: Cargo.toml
crates/mori-mcp/src/: client.rs  config.rs  discovery.rs  lib.rs
crates/mori-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/mori-tauri/assets/canonical-soul/: SOUL.md
crates/mori-tauri/assets/wakeword/: hey-mori.onnx
crates/mori-tauri/capabilities/: default.json
crates/mori-tauri/src/: action_skills.rs  annuli_commands.rs  annuli_config.rs  annuli_supervisor.rs  body_registry.rs  character_pack.rs  context_provider.rs  correction_audit_config.rs  correction_cmd.rs  correction_substitute_config.rs  cue_state.rs  deps.rs  file_loader_cmd.rs  gmail_cmd.rs  hotkey_config.rs  main.rs  mcp_cmd.rs  notification_config.rs  permission_broker.rs  portal_hotkey.rs  recording.rs  recordings.rs  reminder_emitter.rs  reminders_cmd.rs  selection.rs  selection_linux.rs  selection_windows.rs  shell_skill.rs  skill_install_cmd.rs  skill_server.rs  soul_distribution.rs  speaker_id.rs  theme.rs  transcribe_cmds.rs  tts.rs  voice_input_tools.rs  wake_sound.rs  wake_word.rs  wiki_reader.rs  x11_hotkey.rs  (+1 more)
crates/mori-tauri/themes/: dark.json  light.json
crates/mori-time/: Cargo.toml
crates/mori-time/src/: commands.rs  lib.rs  notifier.rs  parser.rs  scheduler.rs  schema.rs
docs/: WAVE-4-DESIGN.md  WAVE-4-E2E.md  _book.css  agent-workflow.md  annuli.html  architecture.md  body-interface-backlog.md  brand.html  character-pack.md  character.html  design-book.html  desktop-ui.html  dev-knowledge-wiki.md  dwelling-rite.html  floating-sprite-spec.md  getting-started.html  hotkeys.html  index.html  installed-apps.html  logs.html  meeting-recorder.md  memory.md  mori-body-interface.md  mori-home.html  mori-instance-direction.md  moripack-integration.md  profile-examples.html  prompt-engineering.html  providers.html  release-format.md  roadmap.md  self-dev-beta-checklist.md  self-hosting-bootstrap.md  self-hosting-phase-a.md  self-hosting-phase-d1.md  self-hosting-phase-d2.md  self-hosting-phase-d3.md  self-hosting-phase-d4.md  self-hosting-phase-d5.md  self-hosting-phase-d6.md  (+8 more)
docs/design/: annuli-memory.md  annuli-wave3-integration.md  jarvis-direction-notes.md
docs/implementation/: CHECKLIST.md
examples-en/agent/: AGENT-01.translate.md  AGENT-02.workflow.md  AGENT-03.zerotype-agent.md  AGENT-04.youtube-summary.md  AGENT-05.listen.md  AGENT-06.obsidian.md  AGENT.md
examples-en/voice_input/: USER-00.minimal.md  USER-01.casual-chat.md  USER-02.formal-letter.md  USER-03.line-post.md  USER-04.sweet-message.md  USER-05.prompt-optim.md
examples/agent/: AGENT-01.翻譯助手.md  AGENT-02.工作流.md  AGENT-03.ZeroType Agent.md  AGENT-04.YouTube 摘要.md  AGENT-05.聽我指令.md  AGENT-06.Obsidian.md  AGENT.md
examples/scripts/: README.wake-train.md  mori-trigger-zerotype.sh  mori-tts-bake.py  mori-tts-edge.py  mori-voice-enroll.py  mori-voice-verify.py  mori-wake-listener.py  mori-wake-train.py  mori-wake-verifier.py  mori-youtube-transcript.sh
examples/voice_input/: USER-00.純文字輸入.md  USER-01.朋友閒聊.md  USER-02.正式信件.md  USER-03.LINE貼文.md  USER-04.哄老婆開心.md  USER-05.提示詞優化.md
public/audio/: README.md
scripts/: install-autostart.sh  install-knowledge-wiki.sh  install-linux-deps.sh  linux-build-packages.txt  restart-dev.sh  stage-mori-cli-for-bundle.mjs  verify.sh
src/: App.tsx  ChatBubble.tsx  ChatPanel.tsx  FloatingMori.test.ts  FloatingMori.tsx  MainShell.tsx  Picker.tsx  ProfileEditor.tsx  Quickstart.tsx  RatingButtons.tsx  ReminderPopup.tsx  Select.tsx  chat-bubble.css  chat-panel.css  floating.css  icons.tsx  main.tsx  picker.css  profile-form.ts  rating-buttons.css  reminder-popup.css  ritualAudio.ts  shell.css  shellTabs.test.ts  shellTabs.ts  styles.css  theme.ts
src/i18n/: index.ts
src/tabs/: AnnuliTab.tsx  BodyTab.tsx  ConfigTab.tsx  CorrectionsTab.tsx  DepsTab.tsx  LogsTab.tsx  MemoryTab.tsx  PermissionsTab.tsx  ProfilesTab.tsx  PulseTab.tsx  RecordingsTab.tsx  SelfDevTab.tsx  (+3 more)
(+18 files in other folders)
