[workspace]
resolver = "2"
members = [
    "crates/mori-core",
    "crates/mori-tauri",
    "crates/mori-cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
license = "MIT"
authors = ["yazelin"]
repository = "https://github.com/yazelin/mori-desktop"

[workspace.dependencies]
# Async runtime + utilities
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures-util = "0.3"
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# serde_yaml 2024 archived,serde_yml 是維護中的 fork
serde_yml = "0.0.12"
schemars = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP / API client
reqwest = { version = "0.12", features = ["json", "multipart", "rustls-tls"], default-features = false }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Internal
mori-core = { path = "crates/mori-core" }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
