[package]
name = "mori-cli"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "mori — CLI proxy 給外部 AI agent (claude/codex/gemini) 透過 Bash tool 呼叫 Mori skills"

[[bin]]
name = "mori"
path = "src/main.rs"

[dependencies]
mori-core = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
# 只要 blocking client — CLI 是 short-lived single-shot 程式,不需要 tokio runtime。
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
clap = { version = "4", features = ["derive"] }
