[package]
name = "mori-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Mori 的大腦 — 平台無關的核心邏輯。"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# Phase 5C v2 — local STT 改 shell-out 接 whisper.cpp 官方 `whisper-server`
# HTTP 子程序。砍掉原本 in-process FFI 整套 C++ build chain(whisper-rs /
# whisper-rs-sys / rubato),mori-core 從此純 Rust + reqwest,Linux build
# 也不再需要 cmake / libclang-dev。
#
# 詳細架構決策 + 為什麼這樣選見 `src/llm/whisper_local.rs` doc comment。
#
# hound: WAV decode/encode。跨平台需要(mori-tauri 也用)。
hound = "3.5"

# redact 模組用 — 進 LLM system prompt 前掃 clipboard / selection 內疑似
# API key / Bearer token 樣式,自動遮蔽。regex 在 Cargo.lock 已是傳遞依賴
# (tracing-subscriber / reqwest 都用),這裡顯式宣告便於直接 use。
regex = "1"

[dev-dependencies]
tempfile = "3"
