[package]
name = "mori-core"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Mori 的大腦 — 平台無關的核心邏輯。"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml = { workspace = true }
schemars = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }

# Phase 5C v2 — local STT 改 shell-out 接 whisper.cpp 官方 `whisper-server`
# HTTP 子程序。砍掉原本 in-process FFI 整套 C++ build chain(whisper-rs /
# whisper-rs-sys / rubato),mori-core 從此純 Rust + reqwest,Linux build
# 也不再需要 cmake / libclang-dev。
#
# 詳細架構決策 + 為什麼這樣選見 `src/llm/whisper_local.rs` doc comment。
#
# hound: WAV decode/encode。跨平台需要(mori-tauri 也用)。
hound = "3.5"

# redact 模組用 — 進 LLM system prompt 前掃 clipboard / selection 內疑似
# API key / Bearer token 樣式,自動遮蔽。regex 在 Cargo.lock 已是傳遞依賴
# (tracing-subscriber / reqwest 都用),這裡顯式宣告便於直接 use。
regex = "1"

# Stream E:`read_file_text` LLM-callable skill(`skill/read_file.rs`)包
# mori-file-loader 公開 API。純 path dep,無 cycle 風險 — mori-file-loader
# 自身只依 thiserror,不 depend mori-core。
mori-file-loader = { path = "../mori-file-loader" }

# §9 P1 「時之鳥」K5:`remind_me` LLM-callable skill(`skill/remind_me.rs`)
# 包 mori-time::ReminderService 公開 API。純 path dep,無 cycle 風險 —
# mori-time 不 depend mori-core(它的 deps 是 rusqlite / chrono / tokio-cron-
# scheduler / notify-rust / chrono-english,跟 mori-core 各自獨立)。
mori-time = { path = "../mori-time" }

# Wave 6 MCP-2:`McpToolSkill` 把 mori-mcp::McpRegistry 暴露的 MCP tool 包成
# Skill trait,LLM 對 Mori 講「幫我用 GitHub 查 issues」就會走這條 dispatch path。
# 純 path dep — mori-mcp 是 leaf crate(只依 rmcp / serde / tokio / tracing),
# 不 depend mori-core,無 cycle 風險。
mori-mcp = { path = "../mori-mcp" }

# Wave 8 Gm-2 「跨界之手」:`ListGmailSkill` / `ReadGmailSkill` / `SendGmailSkill`
# 接 mori-gmail::GmailClient(OAuth2 + Gmail REST API,Gm-1 提供)。純 path dep —
# mori-gmail 是 leaf crate(reqwest + serde + chrono + url + base64),不 depend
# mori-core,無 cycle 風險。Skill 用 Arc<Mutex<GmailClient>> 共享 client(send
# 需要 mut self for ensure_fresh_token,Mutex 提供 interior mutability)。
mori-gmail = { path = "../mori-gmail" }

[dev-dependencies]
tempfile = "3"
# Wave 8 Gm-2:`skill/gmail.rs` tests 走 wiremock 模擬 Gmail REST endpoint,
# 對齊 mori-gmail crate 內部 client tests 風格(不打真 Google,不要 OAuth)。
wiremock = "0.6"
base64 = "0.22"
