[package]
name = "mori-tauri"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Mori 的桌面殼 — Tauri 2 IPC + OS 整合"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mori-core = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }

# Audio capture (cross-platform: ALSA on Linux, CoreAudio on macOS, WASAPI on Windows)
cpal = "0.15"
# WAV encoding (so we can ship audio bytes to Whisper without an external encoder)
hound = "3.5"
# Lock-free shared state for the audio callback path
parking_lot = "0.12"
# Async stream utilities — needed to consume ashpd's GlobalShortcuts signal stream.
futures-util = "0.3"

# Linux-only: xdg-desktop-portal client. Wayland blocks the X11-style
# global-shortcut path that tauri-plugin-global-shortcut uses, so we go
# through `org.freedesktop.portal.GlobalShortcuts` instead. ashpd is the
# canonical Rust wrapper.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
