[package]
name = "mori-tauri"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
description = "Mori 的桌面殼 — Tauri 2 IPC + OS 整合"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
mori-core = { workspace = true }
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-clipboard-manager = "2"
tauri-plugin-global-shortcut = "2"
# 5J-followup: 防止 tauri dev 中斷後 orphan mori-tauri binary 跟新實例同時跑、
# 搶 tray icon / portal hotkey / clipboard。第二個實例自殺,焦點還給第一個。
tauri-plugin-single-instance = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
# 5P-1: character_pack 把 sprite PNG 讀進來 base64 encode 給 frontend
base64 = "0.22"
# 5P-2: ensure_default 內把 256×256 single-frame PNG tile 成 1024×1024 4×4 placeholder
# (動畫 ON 看起來不閃,等正式 sprite 上來覆蓋同檔名)。不依賴 ImageMagick。
image = { version = "0.25", default-features = false, features = ["png"] }

# Phase 5D — local HTTP skill server for Bash CLI proxy。
# 啟動時 bind 127.0.0.1:RANDOM,把 port + token 寫到 ~/.mori/runtime.json,
# 讓 mori CLI(以及外部 AI agent 透過 Bash tool 呼叫 mori CLI)能連回來
# dispatch skill。
axum = { version = "0.7", default-features = false, features = ["http1", "json", "tokio"] }

# Audio capture (cross-platform: ALSA on Linux, CoreAudio on macOS, WASAPI on Windows)
cpal = "0.15"
# WAV encoding (so we can ship audio bytes to Whisper without an external encoder)
hound = "3.5"
# Lock-free shared state for the audio callback path
parking_lot = "0.12"
# Async stream utilities — needed to consume ashpd's GlobalShortcuts signal stream.
futures-util = "0.3"

# Linux-only deps:
# - ashpd: xdg-desktop-portal client for the global-shortcut hotkey
#   (Wayland blocks the X11-style keyboard grab tauri-plugin uses).
# - arboard: read X11 PRIMARY selection directly. We were shelling out
#   to `wl-paste --primary`, which on GNOME Wayland triggers an
#   "unknown wl-clipboard wants clipboard access" portal prompt every
#   single round — flow killer. arboard goes through XWayland's X11
#   selection API (we force GDK_BACKEND=x11), no portal involvement,
#   no prompt.
[target.'cfg(target_os = "linux")'.dependencies]
ashpd = { version = "0.11", default-features = false, features = ["tokio"] }
arboard = "3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
